--- a/Server/src/main/resources/static/css/main.css
+++ b/Server/src/main/resources/static/css/main.css
@@ -10,15 +10,17 @@ html,body {
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-weight: 400;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 1rem;
-    line-height: 1.58;
-    color: #333;
     background-color: #f4f4f4;
-    height: 100%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #333;/* цвет шрифта */
+    margin-top: 70px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 body:before {
@@ -56,11 +58,6 @@ body:before {
 input {
     padding-left: 10px;
     outline: none;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 h1 {
