--- a/Server/src/main/resources/templates/client.html
+++ b/Server/src/main/resources/templates/client.html
@@ -3,68 +3,51 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Client</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" />
+    <script src="/js/bootstrap.min.js" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
+
 <body>
 
 <noscript>
     <h2>Sorry! Your browser doesn't support Javascript</h2>
 </noscript>
 
-<div id="username-page">
-    <div class="username-page-container">
-        <h1 class="title">You are client</h1>
-        <h1 class="title">Enter your username</h1>
-        <form id="usernameForm" name="usernameForm">
-            <div class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control"  name="username"/>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="accent username-submit">Start Chatting</button>
-            </div>
-        </form>
-    </div>
+<div class="username-page" id = "username-page">
+    <form id="usernameForm" name="usernameForm">
+        <h1 class="title">Client</h1>
+        <input type="text" id="name" placeholder="Enter your username" autocomplete="off" class="form-control" name="username"/>
+        <button>Start chatting</button>
+    </form>
 </div>
 
 <div id="chat-page" class="hidden">
-    <div class="chat-container">
-        <div class="chat-header">
-            <h2>Chat</h2>
+    <div class="chatbox">
+        <h1 class="title">Chat</h1>
+        <div class="chatlogs" id="chatlogs"></div>
+        <div class="chat-form">
+            <form class='sendForm' id="sendForm" name="sendForm">
+                <textarea name="textarea" placeholder="Type a message..."></textarea>
+                <button>Send</button>
+            </form>
         </div>
-        <div class="connecting">
-            Wait agent
+
+        <div class="leave">
+            <form id="leave" name="leaveForm">
+                <button>Leave</button>
+            </form>
         </div>
-        <ul id="messageArea">
 
-        </ul>
-        <form id="messageFormSend" name="messageFormSend" nameForm="messageFormSend">
-            <div class="form-group">
-                <div class="input-group clearfix">
-                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control" name="message"/>
-                    <button type="submit" id="sendButton" class="primary">Send</button>
-                </div>
-            </div>
-        </form>
-
-        <form id="messageFormLeave" name="messageFormLeave" nameForm="messageFormLeave">
-            <div class="form-group">
-                <div class="input-group clearfix">
-                    <button type="submit" id='leaveButton' class="primary">Leave</button>
-                </div>
-            </div>
-        </form>
-
-        <form id="messageFormExit" name="messageFormExit" nameForm="messageFormExit">
-            <div class="form-group">
-                <div class="input-group clearfix">
-                    <button type="submit" id='exitButton' class="primary">Exit</button>
-                </div>
-            </div>
-        </form>
-
+        <div class="exit">
+            <form id="exitForm" name="exitForm">
+                <button>Exit</button>
+            </form>
+        </div>
     </div>
 </div>
 
-<script src="/js/main.js"></script>
+<script src="/js/client.js"></script>
 </body>
 </html>
