--- a/Server/src/main/resources/static/css/style.css
+++ b/Server/src/main/resources/static/css/style.css
@@ -9,14 +9,56 @@ body{
     background: #1ddced;
 }
 
+.username-page{
+    width: 450px;
+    min-width: 390px;
+    height: 250px;
+    background: #fff;
+    padding: 20px;/*отвечают за центр белого фона*/
+    margin: 220px auto;/**/
+    box-shadow: 0 3px #ccc;
+    border-radius: 5px;
+}
+
+.username-page button{
+    position: relative;
+    bottom: 10px;
+    left: 130px;
+    background: #f0ad4e;
+    padding: 10px 15px;
+    font-size: 20px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 3px 0 #985f0d;
+    cursor: pointer;
+}
+
+.username-page .title{
+    text-align: center;
+}
+
+.username-page .form-control {
+    width: 100%;
+    min-height: 38px;
+    font-size: 20px;
+    margin: 40px auto;/**/
+    border: 1px solid #c8c8c8;
+}
+
 .chatbox{
-    width: 500px;
+    width: 550px;
     min-width: 390px;
     height: 700px;
     background: #fff;
     padding: 25px;/*отвечают за центр белого фона*/
     margin: 20px auto;/**/
     box-shadow: 0 3px #ccc;
+    border-radius: 5px;
+}
+
+.chatbox .title{
+    text-align: center;
 }
 
 .chatlogs{
@@ -77,10 +119,10 @@ body{
 
 .chat-form textarea{
     background: #fbfbfb;
-    width: 85%;
-    height: 50px;
+    width:410px;
+    height:50px;
     border: 2px solid #eee;
-    border-radius: 3px;
+    border-radius: 5px;
     resize: none;
     padding: 10px;
     font-size: 18px;
@@ -101,26 +143,55 @@ body{
 }
 
 .chat-form button{
+    position: relative;
+    bottom: 20px;
+    left: 10px;
     background: #1ddced;
-    padding: 5px 15px;
+    padding: 8px 20px;
     font-size: 20px;
     color: #fff;
     border: none;
-    margin: 0 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: 0 3px 0 #0eb2c1;
     cursor: pointer;
 }
 
-.exit-and-leave-button button{
+.exit button{
+    position: relative;
+    bottom: 58px;
+    left: 100px;
     background: #d9534f;
-    padding: 5px 15px;
+    padding: 10px 20px;
     font-size: 20px;
     color: #fff;
     border: none;
     margin: 5px 0px;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: 0 3px 0 #761c19;
+    cursor: pointer;
+}
+
+.exitAgent button{
+    background: #d9534f;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: #fff;
+    border: none;
+    margin: 5px 0px;
+    border-radius: 5px;
+    box-shadow: 0 3px 0 #761c19;
+    cursor: pointer;
+}
+
+.leave button{
+    background: #f0ad4e;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: #fff;
+    border: none;
+    margin: 5px 0px;
+    border-radius: 5px;
+    box-shadow: 0 3px 0 #985f0d;
     cursor: pointer;
 }
 
@@ -131,11 +202,16 @@ body{
     margin-bottom: 10px;/*отступ между сообщениями*/
 }
 
-.user .avatar{
+#chat-page .user i {
     width: 60px;
     height: 60px;
-    background: #ccc;
+    font-size: 30px;
+    line-height: 55px;
+    color: #fff;
+    text-align: center;
     border-radius: 50%;
+    font-style: normal;
+    text-transform: uppercase;
 }
 
 .user .message-client{
