--- a/Server/src/main/resources/templates/client_page.html
+++ b/Server/src/main/resources/templates/client_page.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Client</title>
-    <link rel="stylesheet" href="/css/bootstrap.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" />
     <script src="/js/bootstrap.min.js" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/css/client_page_style.css" />
 </head>
 
 <body>
-
 <noscript>
     <h2>Sorry! Your browser doesn't support Javascript</h2>
 </noscript>
 
 <div class="username-page" id = "username-page">
     <form id="usernameForm" name="usernameForm">
-        <h1 class="title">Client</h1>
+        <h1 class="titleClient">Client</h1>
         <input type="text" id="name" placeholder="Enter your username" autocomplete="off" class="form-control" name="username"/>
         <button>Start chatting</button>
     </form>
@@ -28,26 +27,26 @@
         <h1 class="title">Chat</h1>
         <div class="chatlogs" id="chatlogs"></div>
         <div class="chat-form">
-            <form class='sendForm' id="sendForm" name="sendForm">
+            <form class='sendForm' id="sendForm">
                 <textarea name="textarea" placeholder="Type a message..."></textarea>
                 <button>Send</button>
             </form>
         </div>
 
         <div class="leave">
-            <form id="leave" name="leaveForm">
+            <form id="leaveForm">
                 <button>Leave</button>
             </form>
         </div>
 
         <div class="exit">
-            <form id="exitForm" name="exitForm">
+            <form id="exitForm">
                 <button>Exit</button>
             </form>
         </div>
     </div>
 </div>
 
-<script src="/js/client.js"></script>
+<script src="/js/client_handler.js"></script>
 </body>
 </html>
